# scat

./: AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  dist-workspace.toml  mise.toml  rustfmt.toml
.github/workflows/: ci.yml  release-cut.yml  release.yml
.mise/tasks/: flamegraph
src/: custom_langs.rs  decorations.rs  git.rs  main.rs  unprintable.rs
