[package]
name = "scat"
version = "0.2.2"
edition = "2024"
authors = ["Ivan Porto Carrero"]
description = "cat with syntax highlighting - a modern replacement for cat with tree-sitter powered syntax highlighting"
license = "MIT"
repository = "https://github.com/casualjim/scat"
homepage = "https://github.com/casualjim/scat"
readme = "README.md"
keywords = ["cat", "syntax-highlighting", "cli", "terminal", "tree-sitter"]
categories = ["command-line-utilities", "text-processing"]

[package.metadata.release]
sign-commit = false
sign-tag = false
publish = false
allow-branch = ["main"]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
dark-light = "2"
eyre = "0.6"
once_cell = "1.19"
palate = "0.2"
syntastica = "0.6.1"
syntastica-parsers-git = { version = "0.6.1", features = ["all"] }
syntastica-query-preprocessor = "0.6"
syntastica-themes = "0.6.1"
tree-sitter-hcl = "1"
tree-sitter-language = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "=5.12.0"
zvariant = "=5.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
